# Service-structure

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
app/: __init__.py
app/api/common/: views.py
app/api/v1/common/: views.py
app/api/v1/users/: schemas.py  views.py
app/configuration/: config.py  database_accessor.py  events.py  logger.py  routes.py  server.py
app/configuration/database/: base.py  db_helper.py
app/configuration/models/: base.py  db_helper.py
app/models/: __init__.py  common.py  users.py
app/repositories/: common.py  users.py
etc/: config.tmpl.yaml  requirements-dev.txt  requirements.txt
migrations/: env.py
migrations/versions/: 2023_11_08_1911-8900710ffb09_create_users_table.py  ffc57196b484_create_table_user.py
tests/: conftest.py
tests/users/: test_views.py
