[tool.poetry]
name = "service-structure"
version = "0.1.0"
description = ""
authors = ["Konoplyov Matvey <megamott27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
aiohttp = "^3.8.6"
pyyaml = "^6.0.1"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
coverage = "^7.3.2"
ruff = "^0.1.4"
pytest = "^7.4.3"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "app",
]
asyncio_mode="auto"